<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateUserActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="135dp" />

            <EditText
                android:id="@+id/name_input"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:background="@drawable/input_border_custom"
                android:ems="19"
                android:gravity="left |center_vertical"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline13"
                app:layout_constraintTop_toTopOf="@+id/guideline24"
                app:layout_constraintVertical_bias="0.0" />

            <RadioGroup
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:background="@drawable/input_border_custom"
                android:ems="19"
                android:gravity="left |center_vertical"
                android:orientation="horizontal"
                android:padding="15dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline17"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline13"
                app:layout_constraintTop_toTopOf="@+id/guideline12"
                app:layout_constraintVertical_bias="0.0">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="63dp"
                    android:layout_height="55dp"
                    android:checked="true"
                    android:text="@string/male_text"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="64dp"
                    android:layout_height="55dp"
                    android:text="@string/female_text"
                    android:textSize="17sp" />
            </RadioGroup>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="77dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="279dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="208dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:gravity="center_vertical"
                android:text="@string/sex_text_view"
                android:textSize="17dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline17"
                app:layout_constraintEnd_toStartOf="@+id/guideline27"
                app:layout_constraintStart_toStartOf="@+id/guideline27"
                app:layout_constraintTop_toTopOf="@+id/guideline12"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:gravity="center_vertical"
                android:text="@string/name_text_view"
                android:textSize="17dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline12"
                app:layout_constraintEnd_toStartOf="@+id/guideline27"
                app:layout_constraintStart_toStartOf="@+id/guideline27"
                app:layout_constraintTop_toTopOf="@+id/guideline24"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:gravity="center_vertical"
                android:text="@string/college_text_view"
                android:textSize="17dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline16"
                app:layout_constraintEnd_toStartOf="@+id/guideline27"
                app:layout_constraintHorizontal_bias="0.366"
                app:layout_constraintStart_toStartOf="@+id/guideline27"
                app:layout_constraintTop_toTopOf="@+id/guideline17"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:background="@drawable/input_border_custom"
                android:ems="19"
                android:gravity="left |center_vertical"
                android:hint="@string/update_email_hint"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline13"
                app:layout_constraintTop_toTopOf="@+id/guideline16"
                app:layout_constraintVertical_bias="0.0" />

            <Spinner
                android:id="@+id/college_spinner"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:background="@drawable/input_border_custom"
                android:ems="19"
                android:entries="@array/college_name"
                android:gravity="left |center_vertical"
                android:padding="15dp"
                android:popupBackground="@drawable/shape_for_custom_spinner"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline13"
                app:layout_constraintTop_toTopOf="@+id/guideline17"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:gravity="center_vertical"
                android:text="@string/email_text_view"
                android:textSize="17dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline18"
                app:layout_constraintEnd_toStartOf="@+id/guideline27"
                app:layout_constraintHorizontal_bias="0.514"
                app:layout_constraintStart_toStartOf="@+id/guideline27"
                app:layout_constraintTop_toTopOf="@+id/guideline16"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="378dp" />

            <Button
                android:id="@+id/update_user_button"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:alpha="150"
                android:background="@drawable/btn_bg_color"
                android:text="@string/update_user_button_text"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline29"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline29"
                app:layout_constraintTop_toTopOf="@+id/guideline18" />

            <TextView
                android:id="@+id/username_text_view"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:background="@drawable/input_border_custom"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline13"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="67dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:gravity="center_vertical"
                android:text="@string/username_text"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline24"
                app:layout_constraintEnd_toStartOf="@+id/guideline27"
                app:layout_constraintStart_toStartOf="@+id/guideline27"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="42dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50121653" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>