<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddWordActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/word_list_input"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:background="@drawable/input_border_custom"
                android:ems="19"
                android:gravity="left |center_vertical"
                android:hint="@string/word_input_hint"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline10"
                app:layout_constraintEnd_toStartOf="@+id/guideline9"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/translate_input"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:background="@drawable/input_border_custom"
                android:ems="19"
                android:gravity="left |center_vertical"
                android:hint="@string/translate_input_hint"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline11"
                app:layout_constraintEnd_toStartOf="@+id/guideline9"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toTopOf="@+id/guideline10" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="75dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="144dp" />

            <EditText
                android:id="@+id/note_input"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:background="@drawable/input_border_custom"
                android:ems="19"
                android:gravity="left |center_vertical"
                android:hint="@string/note_input_hint"
                android:inputType="textMultiLine"
                android:padding="15dp"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline22"
                app:layout_constraintEnd_toStartOf="@+id/guideline9"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toTopOf="@+id/guideline11"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="218dp" />

            <Button
                android:id="@+id/add_submit_button"
                android:layout_width="330dp"
                android:layout_height="55dp"
                android:alpha="150"
                android:background="@drawable/btn_bg_color"
                android:text="@string/update_word_button"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline23"
                app:layout_constraintEnd_toStartOf="@+id/guideline30"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="@+id/guideline30"
                app:layout_constraintTop_toTopOf="@+id/guideline22"
                app:layout_constraintVertical_bias="0.609" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="314dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5596107" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:gravity="center_vertical"
                android:text="@string/word_text_view"
                android:textSize="17dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline10"
                app:layout_constraintEnd_toStartOf="@+id/guideline26"
                app:layout_constraintStart_toStartOf="@+id/guideline26"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.937" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:gravity="center_vertical"
                android:text="@string/translate_text_view"
                android:textSize="17dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline11"
                app:layout_constraintEnd_toStartOf="@+id/guideline26"
                app:layout_constraintStart_toStartOf="@+id/guideline26"
                app:layout_constraintTop_toTopOf="@+id/guideline10"
                app:layout_constraintVertical_bias="0.58" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="42dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:gravity="center_vertical"
                android:text="@string/note_text_view"
                android:textSize="17dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline22"
                app:layout_constraintEnd_toStartOf="@+id/guideline26"
                app:layout_constraintStart_toStartOf="@+id/guideline26"
                app:layout_constraintTop_toTopOf="@+id/guideline11"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="206dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>